[gd_scene load_steps=3 format=3 uid="uid://dtfnstdi3f8es"]

[ext_resource type="Script" path="res://quest.gd" id="1_xpkxq"]

[sub_resource type="Theme" id="Theme_sr7bl"]

[node name="PlayerCount" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 454.0
offset_top = 271.0
offset_right = 720.0
offset_bottom = 467.0
theme = SubResource("Theme_sr7bl")
script = ExtResource("1_xpkxq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.993474, 1.03016)

[node name="prompt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_top = -13.0
offset_right = 77.0
offset_bottom = 11.0
grow_horizontal = 2
scale = Vector2(1.21235, 1.89781)
pivot_offset = Vector2(31, -27)
theme_override_font_sizes/font_size = 0
text = "How many Players
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -40.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.9973, 1.96077)
alignment = 1

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "2
"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "4
"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -46.0
offset_right = -18.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.62412, 0.78683)

[node name="Name" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2

[node name="Submit" type="Button" parent="."]
layout_mode = 2
offset_left = 183.0
offset_top = 144.0
offset_right = 246.0
offset_bottom = 179.0
text = "Submit"

[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="child_entered_tree" from="HBoxContainer2/Name" to="." method="_on_name_child_entered_tree"]
[connection signal="text_submitted" from="HBoxContainer2/Name" to="." method="_on_name_text_submitted"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
